<resources>
    <string name="app_name">Blood Bank</string>

    <!--    Firebase ID-->
    <string name="default_web_client_id">
        532597646331-s9r566da1uprp2cqdjvsdm2k4f6inbb9.apps.googleusercontent.com
    </string>

    <!-- LoginPage -->
    <string name="login">Sign In</string>
    <string name="mainlogo_description">MainLogo</string>
    <string name="small_logo_description">Small Logo</string>

    <!-- First time user details page -->
    <string name="firstTimeUser_Heading">Enter your details</string>
    <string name="firstTimeUserHint_FName">First Name</string>
    <string name="firstTimeUserHint_LName">Last Name</string>
    <string name="firstTimeUserHint_DOB">Date of Birth</string>
    <string name="firstTimeUserHint_Phone">Contact Number</string>
    <string name="firstTimeUserHint_BloodGroup">Blood Group</string>
    <string name="firstTimeUserHint_City">City</string>
    <string name="firstTimeUserHint_Province">Province</string>
    <string name="firstTimeUserHint_Country">Country</string>
    <string name="firstTimeBtnSignUp">Sign Up</string>

    <!-- Toolbar -->
    <string name="toolBarTitle">Vitaly</string>

    <!-- User card -->
    <string name="userCardNamePost">Name</string>
    <string name="userCardBloodGroupPost">Blood Group</string>
    <string name="userCardProvincePost">Province</string>
    <string name="userCardDescPost">Description</string>
    <string name="userCardPriorityPost">Priority</string>

    <!-- User card - Post -->
    <string name="userCardName">Name</string>
    <string name="userCardBloodGroup">Blood Group</string>
    <string name="userCardProvince">Province</string>

    <!-- Home page -->
    <string name="donateBtn">Donate</string>
    <string name="receiveBtn">Receive</string>
    <string name="createPostBtn">Post</string>

    <!-- Receive Page -->
    <string name="receiveBlood">Receive Blood</string>
    <string name="enterYourLocation">Enter your location</string>
    <string name="location">Location</string>


    <!-- Create Post page -->
    <string name="createPostHeading">Create A New Post</string>
    <string name="createPostUserHint_Desc">Description</string>
    <string name="createPostUserHint_EmailId">Email Id</string>
    <string name="createPostUserHint_NeedBloodDate">Need Blood By Date</string>
    <string name="createPostUserHint_Phone">Contact Number</string>
    <string name="createPostUserHint_BloodGroup">Blood Group</string>
    <string name="createPostUserHint_City">City</string>
    <string name="createPostUserHint_Province">Province</string>
    <string name="createPostUserHint_Country">Country</string>
    <string name="createPostUserHint_Age">"Patient's Age"</string>
    <string name="createPostBtnCreatePost">Create Post</string>
    <string name="createPostBtnCancel">Cancel</string>

    <!-- Edit Page -->
    <string name="editPageTitle">Edit Post</string>
    <string name="editPageBtn">Save Changes</string>

    <!--    Donate page-->
    <string name="donatePage">Donate Blood</string>
    <string name="bloodGroup">Blood Group</string>
    <string name="needByDate">Need By</string>
    <string name="city">City</string>
    <string name="priority">Priority</string>
    <string name="searchBtn">Search</string>
    <string name="donate">Donate</string>
    <string name="search">Search</string>

    <!-- All blood groups -->
    <string-array name="allBloodGroups">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>A2</item>
        <item>A2B</item>
        <item>CisAB</item>
    </string-array>

    <!-- Profile Page -->
    <string name="isActive">Active Donar?</string>
    <string name="profilePic">Profile Photo</string>
    <string name="changeProfilePic">Edit Profile Picture</string>
    <string name="saveChanges">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="date_format">%02d/%02d/%d</string>
    <string name="logout">Logout</string>

    <!-- Popup menu -->
    <string name="editPostPopUp">Edit Post</string>
    <string name="deletePostPopUp">Delete Post</string>

    <!-- Popup menu - Update -->
    <string name="updateDialogTitle">Abandon Changes?</string>
    <string name="updateDialogText">Are you sure you want to abandon changes?</string>

    <!-- Popup menu - Delete -->
    <string name="deleteDialogTitle">Delete Post</string>
    <string name="deleteDialogText">Are you sure you want to delete this post?</string>

    <!-- Popup menu - Logout -->
    <string name="logoutDialogTitle">Logout</string>
    <string name="logoutDialogText">Are you sure you want to logout?</string>

    <!-- Detailed User Profile -->
    <string name="activeDonor">Active Donor</string>
    <string name="fullName">Full Name</string>
    <string name="age">Age</string>
    <string name="provinceCountry">Province, Country</string>
    <string name="contact">Contact</string>
    <string name="description">Description</string>
    <string name="goBack">Back</string>


</resources>