<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePostActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/createPostHeading"
        android:textColor="@color/redLight"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/descriptionTextField"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/halfWhite"
        android:hint="@string/createPostUserHint_Desc"
        android:textColor="@color/redLight"
        android:textColorHint="@color/redLight50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/create_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.001" />

    <EditText
        android:id="@+id/emailTextField"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_below="@string/createPostUserHint_Desc"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/halfWhite"
        android:textColor="@color/redLight"
        android:hint="@string/createPostUserHint_EmailId"
        android:textColorHint="@color/redLight50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/create_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextField"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/needByDate"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="12dp"
        android:backgroundTint="@color/halfWhite"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/createPostUserHint_NeedBloodDate"
        android:textColor="@color/redLight50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/create_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/phone_numberTextField"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_below="@id/needByDate"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/halfWhite"
        android:textColor="@color/redLight"
        android:hint="@string/createPostUserHint_Phone"
        android:textColorHint="@color/redLight50"
        android:textSize="15sp"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/create_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/needByDate"
        app:layout_constraintVertical_bias="0.011" />

    <Spinner
        android:id="@+id/blood_groupTextField"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/redLight"
        android:popupBackground="@color/actionBarColor"
        app:layout_constraintBottom_toTopOf="@+id/create_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_numberTextField"
        app:layout_constraintVertical_bias="0.014" />

    <EditText
        android:id="@+id/cityTextField"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_below="@id/blood_groupTextField"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/halfWhite"
        android:textColor="@color/redLight"
        android:hint="@string/createPostUserHint_City"
        android:textColorHint="@color/redLight50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/create_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_groupTextField"
        app:layout_constraintVertical_bias="0.01" />

    <EditText
        android:id="@+id/provinceTextField"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_below="@id/cityTextField"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/halfWhite"
        android:textColor="@color/redLight"
        android:hint="@string/createPostUserHint_Province"
        android:textColorHint="@color/redLight50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/create_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityTextField"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/countryTextField"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_below="@id/provinceTextField"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/halfWhite"
        android:textColor="@color/redLight"
        android:hint="@string/createPostUserHint_Country"
        android:textColorHint="@color/redLight50"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/create_post_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/provinceTextField"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/create_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/redLight"
        android:textColor="@color/bgBlack"
        android:layout_below="@id/countryTextField"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="60dp"
        android:text="@string/createPostBtnCreatePost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryTextField" />

</androidx.constraintlayout.widget.ConstraintLayout>